--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -60,7 +60,7 @@ html
             p
               | As for the passwords with hints, many of them are ridiculously easy to guess (that's the
               | problem with hints), so we'd be kidding
-              | ourselves to think that the spammers and hackers haven't already gorged themselves on this bounty.
+              | ourselves to think that the spammers and hackers haven't already gorged themselves at this banquet.
               | The leaked file is easily available on the Internet.
             p
               | Just to be safe, though, I took the precaution of anonymizing the blocks displayed
