--- a/app/views/mixins/main-table-header.jade
+++ b/app/views/mixins/main-table-header.jade
@@ -2,6 +2,6 @@ mixin main-table-header(finalColspan)
   thead
     tr
       th(colspan=2) Blocks
-      th Popularity
+      th.hidden-phone Popularity
       th Hints
       th(colspan=#{finalColspan}) My guess
