--- a/app/views/blocks/related-block-rows.jade
+++ b/app/views/blocks/related-block-rows.jade
@@ -5,7 +5,7 @@ tr.related-block-row(ng-show='block.expanded',ng-repeat='relatedBlock in block.r
       mixin block-label('relatedBlock.ids[0]', 'visible', 'inline-block')
   td
     mixin block-label('relatedBlock.ids[1]', 'visible', 'block')
-  td {{relatedBlock.count | number}}
+  td.hidden-phone {{relatedBlock.count | number}}
   td
     span(bs-tooltip='relatedBlock.joinedHints') {{relatedBlock.shortJoinedHints}}
   td
@@ -16,7 +16,7 @@ tr.related-block-row(ng-show='block.expanded',ng-repeat='relatedBlock in block.r
 tr.related-block-row(ng-show='block.expanded && block.moreRelatedBlocks > 0')
   td
   td
-  td
+  td.hidden-phone
   td
   td
   td
