--- a/app/index.jade
+++ b/app/index.jade
@@ -22,6 +22,16 @@ html.no-js
     //- ensure ng-cloaked elements aren't shown while the app is loading, @see ng-cloak in Angular API
     style.
       [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],     .ng-cloak, .x-ng-cloak {display: none;}
+    if config.google_analytics
+      script.
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', !{JSON.stringify(config.google_analytics)}]);
+        _gaq.push(['_trackPageview']);
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
   body(ng-app='ultimate-crossword')
     //if lt IE 7
       p.browsehappy
@@ -35,17 +45,6 @@ html.no-js
       script(src='bower_components/json3/lib/json3.min.js')
     // Add your site or application content here
     .container(ng-view='')
-    if config.google_analytics
-      //-Google Analytics: change UA-XXXXX-X to be your site's ID
-      script.
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        ga('create', !{JSON.stringify(config.google_analytics)});
-        ga('send', 'pageview');
-    else
-      // Dev mode - no google analytics!
     script(src='bower_components/jquery/jquery.js')
     script(src='bower_components/angular/angular.js')
 
