add a "Random!" button

--- a/app/index.jade
+++ b/app/index.jade
@@ -83,5 +83,6 @@ html.no-js
     script(src='scripts/controllers/navbar.js')
     script(src='scripts/controllers/block-detail.js')
     script(src='scripts/controllers/search-controller.js')
+    script(src='scripts/controllers/random-controller.js')
 
     // endbuild
