--- a/app/views/blocks/navbar.jade
+++ b/app/views/blocks/navbar.jade
@@ -15,5 +15,5 @@
         ul.pull-right.ng-cloak.horizontal-navbar
           li(ng-show="pouch.syncWithPouchInProgress")
             span.nav-username
-              | Saving&hellip;&nbsp;
               i.icon-white.icon-refresh
+              | Saving&hellip;
