add changelog to about page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -204,6 +204,11 @@ input.full-size {
   font-size: 12px;
 }
 
+ul.changelog > li > ul > li {
+  font-weight : normal;
+  font-size : 14px;
+}
+
 /**
  * Labels
  */
