--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -7,11 +7,11 @@ html
         .span8.offset2.section-content
             h3 Ultimate Crossword
             h4
-              | v#{pkg.version}, by&nbsp;
+              | v#{pkg.version}, by&#032;
               a(href='http://nolanlawson.com') Nolan Lawson
               | .
             p
-              | This app is 100% open-source and awaits your improvements&nbsp;
+              | This app is 100% open-source and awaits your improvements&#032;
               a(href='http://github.com/nolanlawson/ultimate-crossword-app') on GitHub
               | .
             p
