--- a/app/views/about.jade
+++ b/app/views/about.jade
@@ -46,5 +46,8 @@ html
                         | and then match the guesses with people's email addresses in the leaked file.
                         | I don't want to do any more damage than was already done.
                         | So now, user data is only stored locally.
+                  li
+                    strong 1.1.1
+                    ul: li String changes.
     small.pull-right.muted Page built on !{new Date().toString()}.
 
